chore: more work

--- a/src/_layouts/game.njk
+++ b/src/_layouts/game.njk
@@ -2,6 +2,7 @@
 layout: base
 ---
 <boulders-game>
+  <canvas></canvas>
   <script type="text/plain" data-type="level">
   {{ content | safe }}
   </script>
