--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% if title %}{{ title }} – {% endif %}{{ meta.siteName }}</title>
-
+  <link rel="stylesheet" href="{{ meta.url }}/css/styles.css" />
 </head>
 <body>
   {% block main %}
