--- a/src/_layouts/game.njk
+++ b/src/_layouts/game.njk
@@ -1,11 +1,34 @@
----
-layout: base
----
+{% extends "./base.njk" %}
+
+{% block main %}
+<h1 class="v-hidden">{{ title }}</h1>
 <boulders-game>
   <canvas></canvas>
   <script type="text/plain" data-type="level">
   {{ content | safe }}
   </script>
+  <button class="burger" onclick="gameMenu.showModal()"> 
+    <svg viewBox="0 0 16 16" fill="currentColor">
+      <rect x="1" y="3" width="14" height="2" />
+      <rect x="1" y="7" width="14" height="2" />
+      <rect x="1" y="11" width="14" height="2" />
+    </svg>
+    <span class="v-hidden">
+      open menu
+    </span>
+  </button>
 </boulders-game>
+<dialog class="game-menu flow" id="gameMenu">
+  <h2>Menu</h2>
+  <form method="dialog">
+    <button class="button">Return to game</button>
+  </form>
+  <button class="button">Restart game</button>
+  <a href="{{ meta.url }}" class="button">Back to main menu</a>
+</dialog>
 
+{% endblock %}
+
+{% block scripts %}
 <script type="module" src="{{ meta.url }}/game/game.js"></script>
+{% endblock %}
