--- a/src/css/config/_reset.css
+++ b/src/css/config/_reset.css
@@ -3,3 +3,21 @@
   margin: 0;
   padding: 0;
 }
+
+*:focus {
+  outline: 2px solid currentColor;
+  outline-offset: 4px;
+}
+
+button, *:where([tabindex="0"]) {
+  appearance: none;
+  user-select: none;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  border: none;
+  background: transparent;
+  color: currentColor;
+  text-decoration: none;
+}
