--- a/src/_layouts/game.njk
+++ b/src/_layouts/game.njk
@@ -6,17 +6,17 @@
   <script type="text/plain" data-type="level">
   {{ content | safe }}
   </script>
-  <button class="burger" onclick="gameMenu.showModal()"> 
-    <svg viewBox="0 0 16 16" fill="currentColor">
-      <rect x="1" y="1" width="14" height="3" />
-      <rect x="1" y="6" width="14" height="3" />
-      <rect x="1" y="11" width="14" height="3" />
-    </svg>
-    <span class="v-hidden">
-      open menu
-    </span>
-  </button>
 </boulders-game>
+<button class="burger" aria-controls="gameMenu" onclick="gameMenu.showModal()"> 
+  <svg viewBox="0 0 16 16" fill="currentColor">
+    <rect x="1" y="1" width="14" height="3" />
+    <rect x="1" y="6" width="14" height="3" />
+    <rect x="1" y="11" width="14" height="3" />
+  </svg>
+  <span class="v-hidden">
+    open menu
+  </span>
+</button>
 <dialog class="game-menu flow" id="gameMenu">
   <h2>Menu</h2>
   <form method="dialog">
