--- a/src/css/components/_burger.css
+++ b/src/css/components/_burger.css
@@ -1,5 +1,10 @@
 .burger {
-  padding: 16px;
+  position: absolute;
+  display: block;
+  top: 16px;
+  right: 16px;
+  padding: 8px;
+  margin: 0;
   color: var(--fg);
   z-index: 10;
   > svg {
@@ -8,3 +13,4 @@
     width: 32px;
   }
 }
+
