fix: Update _boulders-game.css

--- a/src/css/components/_boulders-game.css
+++ b/src/css/components/_boulders-game.css
@@ -23,6 +23,7 @@ boulders-game {
   }
 
   > canvas {
+    -webkit-tap-highlight-color: transparent;
     display: block;
     top: 0;
     left: 0;
@@ -33,6 +34,10 @@ boulders-game {
 
     &:focus {
       outline: none;
+    }
+
+    &:active {
+      -webkit-tap-highlight-color: transparent;
     }
 
     &:not(:focus) {
