--- a/src/_layouts/game.njk
+++ b/src/_layouts/game.njk
@@ -7,25 +7,7 @@
   {{ content | safe }}
   </script>
 </boulders-game>
-<button class="burger" aria-controls="gameMenu" onclick="gameMenu.showModal()"> 
-  <svg viewBox="0 0 16 16" fill="currentColor">
-    <rect x="1" y="1" width="14" height="3" />
-    <rect x="1" y="6" width="14" height="3" />
-    <rect x="1" y="11" width="14" height="3" />
-  </svg>
-  <span class="v-hidden">
-    open menu
-  </span>
-</button>
-<dialog class="game-menu flow" id="gameMenu">
-  <h2>Menu</h2>
-  <form method="dialog">
-    <button class="button">Return to game</button>
-  </form>
-  <a href="{{ meta.url }}{{ page.url }}" class="button">Restart game</a>
-  <a href="{{ meta.url }}" class="button">Back to main menu</a>
-</dialog>
-
+{% include "game-menu.njk" %}
 {% endblock %}
 
 {% block scripts %}
