--- a/src/css/components/_burger.css
+++ b/src/css/components/_burger.css
@@ -1,5 +1,5 @@
 .burger {
-  position: absolute;
+  position: fixed;
   display: block;
   top: 16px;
   right: 16px;
@@ -7,6 +7,7 @@
   margin: 0;
   color: var(--fg);
   z-index: 10;
+  
   > svg {
     display: block;
     height: 32px;
