--- a/src/index.njk
+++ b/src/index.njk
@@ -1,13 +1,19 @@
 ---
-layout: base.njk
+layout: home
 eleventyExcludeFromCollection: true
 ---
 <h1>Boulders - A Boulder Dash Clone</h1>
 <p>This is going to be a boulder dash clone, it is still WIP and in its current state, it is more of a proof-of-concept rather than a game.</p>
 
-<ul>
-  <li><a href="/level/01/">Level 01</a></li>
-  <li><a href="/level/02/">Level 02</a></li>
-  <li><a href="/level/02/">Level 03</a></li>
-  <li><a href="/level/02/">Level 04</a></li>
+<ul class="list | grid">
+{% for level in collections.level %}
+  <li class="list__item">
+    <article class="card | block-link">
+      <h2><a href="{{ level.url }}">
+        {{ level.data.title }}
+      </a></h2>
+      <img src="/images/level-preview/{{level.fileSlug}}.png" alt="Screenshot of {{ level.data.title }}">
+    </article>
+  </li>
+{% endfor %}
 </ul>
