feat: add won-menu

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -13,6 +13,8 @@
       {{ content | safe }}
     </main>
   {% endblock %}
+  {% block footer %}
+  {% endblock %}
   {% block scripts %}
   {% endblock %}
 </body>
