--- a/src/_layouts/home.njk
+++ b/src/_layouts/home.njk
@@ -6,3 +6,9 @@
     {{ content | safe }}
   </main>
 {% endblock %}
+
+{% block footer %}
+  <footer>
+    <p>Made with love <span aria-hidden="true">💖</span> by <a href="https://lea.lgbt/@lea" rel="me" target="_blank">Lea Rosema</a></p>
+  </footer>
+{% endblock %}
