--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,6 +6,7 @@
 @import 'components/_game-menu.css';
 @import 'components/_burger.css';
 @import 'components/_card.css';
+@import 'components/_footer.css';
 
 @import 'utils/_block-link.css';
 @import 'utils/_v-hidden.css';
